<resources>
    <string name="app_name">Wrapify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Login</string>
    <string name="menu_gallery">My Spotify Wraps</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="spotify_wrapped">Spotify Wrapped</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Log In</string>
    <string name="settings">Settings</string>
    <string name="generate_short">1 Month</string>
    <string name="generate_med">6 months</string>
    <string name="generate_long">1 year</string>
    <string name="generate">Generate New Wrapped:</string>
    <string name="past_wraps">Past Wraps:</string>
    <string name="top_5_artists">TOP 5 ARTISTS</string>
    <string name="top_5_songs">TOP 5 SONGS</string>
    <string name="top_5_albums">TOP 5 ALBUMS</string>
    <string name="top_5_genres">TOP 5 GENRES</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="update_message">Update Login Information</string>
</resources>