<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/sign_out" />
        <item

            android:id="@+id/nav_wrapped"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_app_settings_alt_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_pastwrapped"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/pastwrapped" />
    </group>
</menu>